crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_5.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
[TC004]: [*] Move import `typing.List` out of type-checking block. Import is used for more than type hinting.
 --> TC004_5.py:4:24
  |
3 | if TYPE_CHECKING:
4 |     from typing import List, Sequence, Set
  |                        ^^^^ Move out of type-checking block
  |

ℹ Unsafe fix
1 1 | from typing import TYPE_CHECKING
  2 |+from typing import List, Sequence, Set
2 3 | 
3 4 | if TYPE_CHECKING:
4   |-    from typing import List, Sequence, Set
  5 |+    pass
5 6 | 
6 7 | 
7 8 | def example(a: List[int], /, b: Sequence[int], *, c: Set[int]):

[TC004]: [*] Move import `typing.Sequence` out of type-checking block. Import is used for more than type hinting.
 --> TC004_5.py:4:30
  |
3 | if TYPE_CHECKING:
4 |     from typing import List, Sequence, Set
  |                              ^^^^^^^^ Move out of type-checking block
  |

ℹ Unsafe fix
1 1 | from typing import TYPE_CHECKING
  2 |+from typing import List, Sequence, Set
2 3 | 
3 4 | if TYPE_CHECKING:
4   |-    from typing import List, Sequence, Set
  5 |+    pass
5 6 | 
6 7 | 
7 8 | def example(a: List[int], /, b: Sequence[int], *, c: Set[int]):

[TC004]: [*] Move import `typing.Set` out of type-checking block. Import is used for more than type hinting.
 --> TC004_5.py:4:40
  |
3 | if TYPE_CHECKING:
4 |     from typing import List, Sequence, Set
  |                                        ^^^ Move out of type-checking block
  |

ℹ Unsafe fix
1 1 | from typing import TYPE_CHECKING
  2 |+from typing import List, Sequence, Set
2 3 | 
3 4 | if TYPE_CHECKING:
4   |-    from typing import List, Sequence, Set
  5 |+    pass
5 6 | 
6 7 | 
7 8 | def example(a: List[int], /, b: Sequence[int], *, c: Set[int]):
